# f2fs_tools

./: CMakeLists.txt  redmi.txt
include/: f2fs_fs.h
lib/: libf2fs.c
